--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -34,7 +34,7 @@
     <div></div>
     <!-- Logo on the right -->
     <figure class="logo">
-        <img src="~/images/logo.png" alt="PayFare Logo">
+        <img src="/images/logo.png" alt="PayFare Logo">
     </figure>
 </header>
 <main>
@@ -42,9 +42,9 @@
         <div class="list">
             <article class="item other_1">
                 <div class="main-content" 
-                style="background-color: #9c4d2f; background-image: url('~/images/bg1.png'); background-size: cover; background-position: center;">
+                style="background-color: #9c4d2f; background-image: url('/images/bg1.png'); background-size: cover; background-position: center;">
                     <div class="content">
-                        <img src="~/images/full logo.png" alt="PayFare Logo" class="title-image">
+                        <img src="/images/full%20logo.png" alt="PayFare Logo" class="title-image">
                         <p class="Header">Ride Easy, Pay Fairly</p>
                         <p class="description">
                             PayFare is a fare calculating app designed for commuters across the Philippines. It provides accurate fare estimates for various transportation modes, helping users plan their trips efficiently and budget their travel costs with ease.
@@ -52,14 +52,14 @@
                     </div>
                 </div>
                 <figure class="image">
-                    <img src="~/images/pogs.png" alt="PayFare App Interface">
+                    <img src="/images/pogs.png" alt="PayFare App Interface">
                 </figure>
             </article>
             <article class="item active">
                 <div class="main-content" 
-                style="background-color: #f5bfaf; background-image: url('~/images/bg2.png'); background-size: cover; background-position: center;">
+                style="background-color: #f5bfaf; background-image: url('/images/bg2.png'); background-size: cover; background-position: center;">
                     <div class="content">
-                        <img src="~/images/full logo.png" alt="PayFare Logo" class="title-image">
+                        <img src="/images/full%20logo.png" alt="PayFare Logo" class="title-image">
                         <p class="Aheader2">Your fare buddy, anywhere in the Philippines</p>
                         <p class="description">
                             A Fare Calculating App designed for commuters across the Philippines
@@ -67,24 +67,24 @@
                     </div>
                 </div>
                 <figure class="image">
-                    <img src="~/images/pinplace.png" alt="Location Pin">
+                    <img src="/images/pinplace.png" alt="Location Pin">
                 </figure>
             </article>
             <article class="item other_2">
                 <div class="main-content" 
-                style="background-color: #dedfe1; background-image: url('~/images/bg3.png'); background-size: cover; background-position: center;">
+                style="background-color: #dedfe1; background-image: url('/images/bg3.png'); background-size: cover; background-position: center;">
                     <div class="content">
-                        <img src="~/images/full logo.png" alt="PayFare Logo" class="title-image">
+                        <img src="/images/full%20logo.png" alt="PayFare Logo" class="title-image">
                         <p class="description">
                             A Fare Calculating App designed for commuters across the Philippines
                         </p>
-                        <button class="CalculateNow">
+                        <button class="CalculateNow" onclick="location.href='/ffDashboard'">
                             Calculate Now
                         </button>
                     </div>
                 </div>
                 <figure class="image">
-                    <img src="~/images/cars.png" alt="Transportation Options">
+                    <img src="/images/cars.png" alt="Transportation Options">
                 </figure>
             </article>
         </div>
